www/css/core.css
/* ... */
@media(max-width: 900px){
	ol.ebooks-list.grid{
		grid-template-columns: repeat(3, minmax(0, 1fr));
	}

	.button-row{
		grid-template-columns: 1fr;
	}

	.donate a.button{
		white-space: normal;
	}

	.donate table td{
		display: block;
	}

	.donate table td:first-child{
		vertical-align: top;
	}

	.donate table td + td{
		padding-top: 0;
	}

	.donate table tr + tr td:first-child{
		padding-top: 2rem;
	}

	.donate table td p{
		text-align: center;
	}

	div.progress p.stretch-base{
		display: none;
	}
}

@media(max-width: 870px){
	form[action="/ebooks"] button{
		grid-row: 3;
		grid-column: 1 / span 4;
		margin-top: 0;
	}
}

@media(max-width: 860px){
	article nav a[rel]{
		font-size: 0;
	}

	article nav a[rel]::before,
	article nav a[rel]::after{
		font-size: 1rem;
		margin: 0;
	}
}

@media(max-width: 860px){
	.thank-you-container picture{
		display: none;
	}
}

@media(max-width: 730px){
	form[action="/ebooks"]{
		grid-template-columns: auto auto 1fr 1fr;
	}

	form[action="/ebooks"] label.tags{
		grid-row: 1;
		grid-column: 1 / span 2;
	}

	form[action="/ebooks"] label:has(input[type="search"]){
		grid-row: 1;
		grid-column: 3 / span 2;
	}

	form[action="/ebooks"] label.sort{
		grid-row: 2;
		grid-column: 1 / span 3;
	}

	form[action="/ebooks"] label.view{
		grid-row: 3;
		grid-column: 1;
	}

	form[action="/ebooks"] label.per-page{
		grid-row: 3;
		grid-column: 2;
	}

	form[action="/ebooks"] button{
		grid-row: 3;
		grid-column: 4;
		margin-top: 1.4rem;
	}

	article nav ol li:not(:has(a[aria-current])),
	main nav.pagination ol li:not(:has(a[aria-current])){
		display: none;
	}
}

@media(max-width: 700px){
	ol.ebooks-list.grid{
		grid-template-columns: repeat(2, minmax(0, 1fr));
	}

	footer ul.nav-links li:nth-child(2)::after,
	footer ul.nav-links li:nth-child(5)::after{
		content: "\A"; /* This is a line break */
		white-space: pre;
		margin: 0;
	}

	footer ul.nav-links li:nth-child(4)::after{
		content: "\b7";
		content: "\b7" / "";
		white-space: normal;
		margin: 0 10px;
	}

	.ebooks-toolbar a.button{
		font-size: 0;
		gap: 0;
		padding: .5rem .75rem;
	}

	table.admin-table .single-line-form{
		flex-direction: column;
	}

	table.admin-table .single-line-form button{
		align-self: flex-end;
	}
}

@media(max-width: 680px){
	main.front-page h1{
		font-size: 2.4rem;
	}

	article.ebook section#details ul,
	article.ebook section#sources ul{
		grid-template-columns: 1fr;
	}

	article nav ol li:has(a[aria-current])::before,
	article nav ol li:has(a[aria-current])::after,
	main nav.pagination ol li:has(a[aria-current])::before,
	main nav.pagination ol li:has(a[aria-current])::after{
		display: none;
	}

	.donation,
	article.ebook section .donation{
		text-align: justify;
		hyphens: auto;
	}

	.donation .flipboard{
		text-align: center;
	}

	.donation .flipboard span{
		margin-bottom: 1rem;
	}

	.donation p:last-child,
	article.ebook section .donation p:last-child,
	.donation header p{
		text-align: center;
	}

	body > header{
		padding-top: 1rem;
	}

	body > header > a{
		max-width: calc(100% - 2rem);
	}

	body > header ul{
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		margin: 1rem;
		margin-bottom: 0;
	}

	body > header ul li:nth-child(3){
		display: contents;
	}

	body > header ul li:nth-child(3)::after{
		content: "";
		width: 100%;
	}

	body > header ul li{
		margin: 0;
	}

	body > header ul li:nth-child(4)::before{
		display: none;
	}

	body > header ul li:nth-child(3) ~ li{
		margin-top: .5rem;
	}
}

@media(max-width: 580px){
	figure.realistic-ebook{
		display: none;
	}
}

@media(max-width: 550px){
	form[action="/ebooks"]{
		grid-template-columns: auto auto 1fr;
	}

	form[action="/ebooks"] label.tags{
		grid-row: 1;
		grid-column: 1 / span 3;
	}

	form[action="/ebooks"] label:has(input[type="search"]){
		grid-row: 2;
		grid-column: 1 / span 3;
	}

	form[action="/ebooks"] label.sort{
		grid-row: 3;
		grid-column: 1 / span 3;
	}

	form[action="/ebooks"] label.view{
		grid-row: 4;
		grid-column: 1;
	}

	form[action="/ebooks"] label.per-page{
		grid-row: 4;
		grid-column: 2;
	}

	form[action="/ebooks"] button{
		grid-row: 5;
		grid-column: 1 / span 3;
		margin-top: 0;
	}

	form[action="/newsletter-subscriptions"] label.text,
	form[action="/newsletter-subscriptions"] label.captcha,
	form[action="/newsletter-subscriptions"] fieldset{
		grid-column: 1 / span 2;
	}

	.masthead ol.donors.patrons{
		columns: 2;
	}

	.collections-list{
		column-count: unset;
	}
}
/* ... */

